Bug 372076 - IConvAdaptor::SetOutputErrorBehavior should handle nsIUnicodeEncoder::kOnError_Signal p=Ryan Jones <sciguyryan@gmail.com> r=smontagu